fixed: image style on mobile screen

--- a/src/widgets/welcome/styles.scss
+++ b/src/widgets/welcome/styles.scss
@@ -97,6 +97,10 @@
     object-fit: cover;
     object-position: left bottom;
     z-index: -1;
+
+    @include breakpoint-down($md) {
+      height: 100%;
+    }
   }
 
   .swiper-navigation {
